src/test/deca/context/invalid/class/47-declFieldSameNameDifferentType.deca
/* Description:
     teste la régle (2.4) Déclaration de field plusieur fois avec different type

    Historique:
      cree le 22/01/2020
*/

class A {
  B class1;
  int class1;
}

class B {

}
